# feels

./: .env.example  .envrc  .gitignore  Anchor.toml  Cargo.nix  Cargo.toml  JUSTFILE.md  README.md  build_output.txt  check_tests.sh  debug-idl.sh  diagnose_issues.sh  docs  flake.nix  justfile  run_tests.sh  test_keypair.json  verify_compilation.sh
adapters/feels-jupiter-adapter/: Cargo.toml
adapters/feels-jupiter-adapter/examples/: jupiter_integration.rs
adapters/feels-jupiter-adapter/src/: amm.rs  config.rs
crates/feels-core/: Cargo.toml
crates/feels-core/src/: constants.rs  errors.rs  lib.rs
crates/feels-core/tests/: math_parity.rs
crates/keeper/: Cargo.toml  keeper.example.toml
crates/keeper/src/: config.rs  error.rs  field_computation.rs  field_computation_mode_b.rs  hysteresis_controller.rs  keeper.rs  lib.rs  main.rs
crates/math/: Cargo.toml
crates/math/src/: fixed_point.rs  geometry.rs  lib.rs  safe.rs  work_calc.rs
crates/sdk/: Cargo.toml  README.md
crates/sdk/examples/: router_usage.rs  sdk_basic_usage.rs
crates/sdk/src/: client.rs  errors.rs  field_commitment.rs  lib.rs  math.rs  proof_builder.rs  rebate_calculator.rs  router.rs  router_advanced.rs  types.rs  utils.rs  work_calculator.rs
crates/types/: Cargo.toml
crates/types/src/: constants.rs  errors.rs  field.rs  lib.rs  market.rs  math.rs
e2e/minimal-streaming-adapter/: Cargo.toml
e2e/minimal-streaming-adapter/src/: main.rs
e2e/streaming-adapter/: Cargo.toml
e2e/streaming-adapter/src/: main.rs
feels-indexer/: Cargo.minimal.toml  Cargo.toml  README.md  build.rs  indexer-config.toml  indexer-devnet.toml  indexer-e2e.toml  indexer-localnet.toml  indexer-mainnet.toml  indexer-minimal.toml  indexer.toml  minimal.toml
feels-indexer/.sqlx/: query-{}.json
feels-indexer/geyser-plugin/: Cargo.toml
feels-indexer/geyser-plugin/src/: main.rs
feels-indexer/migrations/: 0002_add_indexes.sql  001_initial_schema.sql
feels-indexer/src/: config.rs  lib.rs  lib_minimal.rs  main.rs  main_minimal.rs  rpc_client.rs  sdk_types.rs  streaming_client.rs  test_simple.rs
feels-indexer/src/adapters/: mod.rs
feels-indexer/src/api/: handlers.rs  jupiter_integration.rs  mod.rs  responses.rs  routes.rs  swap_simulation.rs  token_balance.rs  transaction_builder.rs  websocket.rs
feels-indexer/src/core/: error.rs  mod.rs  traits.rs  types.rs
feels-indexer/src/database/: mod.rs  postgres.rs  postgres_operations.rs  postgres_operations_runtime.rs  postgres_runtime.rs  redis.rs  redis_operations.rs  rocksdb.rs  rocksdb_operations.rs  tantivy.rs
feels-indexer/src/domain/: mod.rs
feels-indexer/src/geyser/: client.rs  consumer.rs  filters.rs  mod.rs  stream_handler.rs  stream_processor.rs
feels-indexer/src/infrastructure/: mod.rs  service_container.rs
feels-indexer/src/models/: buffer.rs  floor.rs  market.rs  mod.rs  position.rs  swap.rs
feels-indexer/src/processors/: buffer.rs  floor.rs  market.rs  mod.rs  position.rs  registry.rs  simple_market.rs  swap.rs
feels-indexer/src/repositories/: mod.rs
feels-indexer/src/services/: mod.rs
feels-indexer/tests/: REFACTORING-NOTE.md  api_tests.rs  basic_tests.rs  config_tests.rs  database_integration_tests.rs  geyser_tests.rs  integration_devnet.rs  integration_tests.rs  justfile  minimal_test.rs  processor_tests.rs  rocksdb_unit_tests.rs  simple_test.rs  standalone_test.rs  storage_tests.rs  test_geyser.sh  test_with_services.sh
feels-jupiter-adapter/: Cargo.toml
feels-jupiter-adapter/src/: lib.rs  tests.rs
feels-jupiter-adapter/tests/: cross_tick_quote.rs
feels-sdk/: Cargo.toml  README.md
feels-sdk/examples/: basic_usage.rs  comprehensive_flow.rs  swap_flow.rs
feels-sdk/src/: lib.rs  prelude.rs
feels-sdk/src/client/: base.rs  liquidity.rs  market.rs  mod.rs  pomm.rs  position.rs  protocol.rs  registry.rs  swap.rs
feels-sdk/src/core/: constants.rs  error.rs  mod.rs  types.rs
feels-sdk/src/instructions/: builder.rs  liquidity.rs  market.rs  mod.rs  pomm.rs  position.rs  protocol.rs  registry.rs  swap.rs
feels-sdk/src/jupiter/: mod.rs  simulator.rs  tick_array.rs  types.rs
feels-sdk/src/protocol/: fees.rs  math.rs  mod.rs  pda.rs
feels-sdk/tests/: test_initialize_market.rs
patches/solana-net-utils/: Cargo.toml
patches/solana-net-utils/src/: ip_echo_client.rs  ip_echo_server.rs  lib.rs
programs/amm/: Cargo.toml
programs/amm/src/: error.rs  lib.rs  math.rs
programs/feels/: Cargo.toml  Cargo.toml.idl
programs/feels-jupiter-adapter/: Cargo.toml  README.md
programs/feels-jupiter-adapter/examples/: jupiter_integration.rs
programs/feels-jupiter-adapter/src/: amm.rs  lib.rs  tests.rs
programs/feels/docs/: keeper_to_oracle_migration.md  state_simplification_guide.md  tick_consolidation_plan.md  unified_api_migration.md  unified_order_system_analysis.md  workunit_pattern.md
programs/feels/examples/: canonical_bump_pattern.rs  fee_model_usage.rs  full_token_launch.rs
programs/feels/src/: constant.rs  constants.rs  error.rs  events.rs  lib.rs  macros.rs
programs/feels/tests/: README.md  TEST_STRUCTURE.md  analyze_tests.sh  consolidate_dummy_tests.sh  feels_tests.rs  justfile  (+22 more)
programs/feelssol_controller/: Cargo.toml
programs/protocol/: Cargo.toml
programs/token_factory/: Cargo.toml
programs/token_wrapper/: Cargo.toml
sdk/: Cargo.toml  README.md
sdk/examples/: basic_usage.rs  complete_flow.rs  comprehensive_flow.rs  sdk_basic_usage.rs  swap_flow.rs  swap_usage.rs  tranche_crank_and_cleanup.rs  unified_api_examples.rs
sdk/src/: client.rs  config.rs  error.rs  errors.rs  exact_output_swap.rs  fee_estimator.rs  instructions.rs  lib.rs  prelude.rs  router.rs  swap_builder.rs  testing.rs  types.rs  utils.rs  work_calculator.rs
sdk/tests/: test_initialize_market.rs
simulation/: Cargo.toml  README.md
simulation/examples/: basic_usage.rs
simulation/src/: account_factory.rs  lib.rs  liquidity_simulator.rs  pool_factory.rs  scenario_runner.rs  swap_simulator.rs  test_environment.rs  token_factory.rs
vanity-miner-wasm/: Cargo.toml  README.md  justfile  test.html
vanity-miner-wasm/src/: lib.rs  test.rs
(+998 files in other folders)
