[workspace]
resolver = "2"
members = [
    "programs/feels",
    "sdk",
    "simulation",
]

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.18.26"
borsh = "0.10"
bytemuck = "1.14"
spl-token = "4.0.0"
spl-token-2022 = { version = "1.0.0", default-features = false }
spl-token-metadata-interface = "0.2.0"
spl-associated-token-account = "2.3.0"
# Test dependencies disabled due to yanked solana_rbpf dependency
# solana-program-test = "1.18.26"
# solana-sdk = "1.18.26"
# tokio = "1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

# Patches disabled due to yanked dependency conflicts



