[workspace]
resolver = "2"
members = [
    "programs/feels",
    "sdk",
]
# Exclude Jupiter adapter from workspace as it's a library not for BPF deployment
exclude = [
    "adapters/feels-jupiter-adapter",
    "feels-streaming-adapter",
    "feels-indexer",
    "simple-streaming-adapter",
    "minimal-streaming-adapter",
    "e2e/minimal-streaming-adapter",
]

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-client = "0.31.1"
anchor-spl = "0.31.1"
solana-program = "2.2.1"
solana-sdk = "2.2.1"
solana-client = "2.2.1"
# Force older version to avoid Rust 1.85 requirement
base64ct = "=1.6.0"
borsh = "0.10.3"
bytemuck = "1.14"
spl-token = "7.0"
spl-token-2022 = { version = "6.0", default-features = false }
spl-token-metadata-interface = "0.6"
spl-associated-token-account = "6.0"
integer-sqrt = "0.1"
getrandom = { version = "0.2", features = ["custom"] }
# Pin ahash to avoid getrandom 0.3 dependency
ahash = { version = "=0.8.6", default-features = false }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
fixed = { version = "1.28", features = ["serde", "num-traits"] }
num-traits = "0.2"
# Test dependencies disabled due to yanked solana_rbpf dependency
solana-program-test = "2.2.1"

# Patch section removed - using dependency overrides instead

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.package."*"]
opt-level = 2
overflow-checks = false

[profile.release.package.feels]
opt-level = 2
overflow-checks = true
