[package]
name = "feels-jupiter-adapter"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("no-entrypoint", "no-idl", "no-log-ix-name", "cpi", "default", "anchor-debug", "custom-heap", "custom-panic"))'
] }

[lib]
crate-type = ["lib"]  # Not cdylib - this is not meant for BPF deployment
name = "feels_jupiter_adapter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []
# Enable RPC client for config initialization (not for BPF)
rpc-init = ["solana-client"]

[dependencies]
# Use workspace dependencies
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }
getrandom = { workspace = true }

# Local dependencies
feels = { path = "../programs/feels", features = ["cpi"] }
feels-sdk = { path = "../feels-sdk" }

# External dependencies
jupiter-amm-interface = "0.5.0"
rust_decimal = "1.0"
ahash = { workspace = true }
once_cell = "1.19"
orca_whirlpools_core = { version = "2.0.0", default-features = false }
solana-client = { workspace = true, optional = true }

[dev-dependencies]
solana-sdk = { workspace = true }
anyhow = { workspace = true }
