[package]
name = "feels-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for interacting with the Feels protocol on Solana"
license = "MIT"
repository = "https://github.com/timewave/feels-solana"
keywords = ["solana", "sdk", "amm", "defi", "client"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("default", "advanced"))'
] }

[features]
default = ["advanced"]
advanced = []

[dependencies]
# Solana dependencies (explicit versions - not using workspace)
anchor-lang = "0.31.1"
solana-sdk = "=2.2.1"
solana-program = "=2.2.1"
# Removed solana-client to avoid Rust 1.83 requirement
# Using ureq for lightweight RPC calls instead (like indexer does)
# IMPORTANT: Lock to 2.9 to avoid icu_* dependencies that require Rust 1.83
ureq = { version = "=2.9", features = ["json"] }
base64 = "0.22"
spl-token = "7.0"
spl-associated-token-account = "6.0"
mpl-token-metadata = { version = "5.1.1", default-features = false }

# Common dependencies
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
borsh = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
integer-sqrt = "0.1"
fixed = { version = "=1.28", features = ["serde", "num-traits"] }
num-traits = "0.2"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
bincode = "1.3"  # For transaction serialization in RpcHelper

# Math dependencies for accurate CLMM simulation
orca_whirlpools_core = { version = "2.0.0", default-features = false }

# Hash map for tick array parsing
ahash = "0.8"

# Version overrides for compatibility
base64ct = "=1.6.0"
getrandom = { version = "0.2", features = ["custom"] }

# Force older url/idna to get icu 2.0.x which works with Rust 1.82
# (icu 2.1.x requires Rust 1.83)
url = "=2.5.0"
idna = "=1.0.2"

# Import the Feels program types
feels = { path = "../programs/feels", features = ["no-entrypoint"] }

[dev-dependencies]
anyhow = "1.0"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[bin]]
name = "feels"
path = "src/bin/main.rs"
