[package]
name = "feels-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for interacting with the Feels protocol on Solana"
license = "MIT"
repository = "https://github.com/timewave/feels-solana"
keywords = ["solana", "sdk", "amm", "defi", "client"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
anchor-client = { version = "0.29.0", features = ["async"] }
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-sdk = "1.18.26"
solana-client = "1.18.26"
solana-program = "1.18.26"
spl-token = "4.0.0"
spl-token-2022 = { version = "1.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "2.3.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
borsh = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Import the Feels program types
feels = { path = "../programs/feels", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.18.26"

[[example]]
name = "sdk_basic_usage"
path = "examples/sdk_basic_usage.rs"