[package]
name = "feels-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for interacting with the Feels protocol on Solana"
license = "MIT"
repository = "https://github.com/timewave/feels-solana"
keywords = ["solana", "sdk", "amm", "defi", "client"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("default", "advanced"))'
] }

[features]
default = ["advanced"]
advanced = []

[dependencies]
# Shared protocol crates
# feels-core = { workspace = true, features = ["client", "advanced"] }

# Anchor and Solana dependencies
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
mpl-token-metadata = { version = "5.1.1", default-features = false }

# Common dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
integer-sqrt = { workspace = true }
fixed = "1.24"
num-traits = "0.2"

# Math dependencies for accurate CLMM simulation
orca_whirlpools_core = { version = "2.0.0", default-features = false }

# Hash map for tick array parsing
ahash = "0.8"

# Import the Feels program types
feels = { path = "../programs/feels", features = ["no-entrypoint"] }

[dev-dependencies]
anyhow = { workspace = true }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
