[package]
name = "feels-simulation"
version = "0.1.0"
edition = "2021"
description = "Simulation framework for testing the Feels protocol"
license = "MIT"
repository = "https://github.com/timewave/feels-solana"
keywords = ["solana", "simulation", "testing", "amm", "defi"]
categories = ["development-tools::testing", "cryptography::cryptocurrencies"]

[dependencies]
# Core dependencies that work with current toolchain
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

# Local dependencies
feels = { path = "../programs/feels", features = ["cpi"] }

# Temporarily disabled due to edition2024 dependency issues
# anchor-client = "0.29.0"
# solana-client = "1.18.26"
# solana-program-test = "1.18.26"
# spl-token = "4.0.0"
# spl-token-2022 = { version = "1.0.0", features = ["no-entrypoint"] }
# spl-associated-token-account = "2.3.0"
# mpl-token-metadata = "4.1.0"
# feels-sdk = { path = "../sdk" }
# tokio = { version = "1", features = ["full"] }
# async-trait = "0.1"
# anyhow = "1.0"

[dev-dependencies]
proptest = "1.0"