[package]
name = "vanity-miner-wasm"
version = "0.1.0"
edition = "2021"
description = "High-performance Solana vanity address miner compiled to WebAssembly"
repository = "https://github.com/timewave-computer/feels-solana"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["simd"] 
simd = []
parallel = []

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window", "Worker", "WorkerGlobalScope"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
ed25519-dalek = { version = "2.1", features = ["std"] }
bs58 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# Pin base64ct to avoid edition2024 requirement
base64ct = "=1.6.0"
# For secure fast random generation
rand = "0.8"
rand_chacha = "0.3"
# Modern allocator for smaller WASM binaries
wee_alloc = "0.4"
# SIMD and threading (temporarily disabled for testing)
# rayon = "1.11"
# wasm-bindgen-rayon = "1.3"

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
# Additional optimizations for WASM
overflow-checks = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2", "--enable-simd"]
