[package]
name = "feels-jupiter-adapter"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("no-entrypoint", "no-idl", "no-log-ix-name", "cpi", "default", "anchor-debug", "custom-heap", "custom-panic"))'
] }

[lib]
crate-type = ["lib"]  # Not cdylib - this is not meant for BPF deployment
name = "feels_jupiter_adapter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []
# Enable RPC client for config initialization (not for BPF)
rpc-init = ["solana-client"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
feels = { path = "../feels", features = ["cpi"] }
jupiter-amm-interface = "0.6.0"
solana-program = "2.2.1"
anyhow = "1.0"
spl-token = "7.0"
spl-associated-token-account = "6.0"
bytemuck = "1.14"
rust_decimal = "1.0"
ahash = "0.8"
once_cell = "1.19"
# Fix getrandom for BPF
getrandom = { version = "0.2", features = ["custom"] }
orca_whirlpools_core = { version = "2.0.0", default-features = false }
feels-sdk = { path = "../../sdk" }
solana-client = { version = "2.2.1", optional = true }

[dev-dependencies]
solana-sdk = "2.2.1"
anyhow = "1.0"
