[package]
name = "feels-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core types and logic for Feels Protocol - shared between on-chain and off-chain"

[features]
default = []
# Enable Anchor serialization for on-chain use
anchor = ["anchor-lang"]
# Enable standard serialization for off-chain use
client = ["serde", "borsh"]
# Enable advanced math functions for off-chain use
advanced = ["serde", "fixed", "num-traits"]

[dependencies]
# Core dependencies (always needed)
thiserror = "1.0"

# Optional on-chain dependencies
anchor-lang = { workspace = true, optional = true }

# Optional off-chain dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
borsh = { workspace = true, optional = true }

# Math dependencies
fixed = { version = "1.28", optional = true, features = ["serde", "num-traits"] }
num-traits = { version = "0.2", optional = true }

[dev-dependencies]
# For testing
proptest = "1.0"