[package]
name = "feels-keeper"
version = "0.1.0"
edition = "2021"
description = "Off-chain keeper for Feels Protocol market physics computation"

[dependencies]
# Shared protocol crates
feels-core = { workspace = true, features = ["client", "advanced"] }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"

# Solana dependencies
solana-client = { workspace = true }
solana-sdk = "1.18.26"
anchor-client = { version = "0.29.0", features = ["async"] }
anchor-lang = { workspace = true }

# Math and computation
fixed = { workspace = true }
num-traits = { workspace = true }
micromath = "2.1"
# ruint = { version = "1.12.0", features = ["serde"] }

# Time and scheduling
cron = "0.12"
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "feels-keeper"
path = "src/main.rs"