[package]
name = "feels-math"
version = "0.1.0"
edition = "2021"
description = "Mathematical utilities for the Feels Protocol"
license = "MIT"

[dependencies]
# Core dependencies
feels-types = { workspace = true }

# Math libraries
fixed = { workspace = true }
num-traits = { workspace = true }
integer-sqrt = { workspace = true }

# Serialization
serde = { workspace = true }

# Optional advanced math (for eigenvalue computation, etc.)
nalgebra = { version = "0.32", optional = true }
approx = { version = "0.5", optional = true }

[features]
default = []
advanced = ["nalgebra", "approx"]  # Enable advanced mathematical functions

[dev-dependencies]
approx = "0.5"