[package]
name = "feels-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for interacting with the Feels protocol on Solana"
license = "MIT"
repository = "https://github.com/timewave/feels-solana"
keywords = ["solana", "sdk", "amm", "defi", "client"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
# Shared protocol crates
feels-types = { workspace = true }
feels-math = { workspace = true }

# Anchor and Solana dependencies
anchor-client = { workspace = true, features = ["async"] }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true }

# Common dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
integer-sqrt = { workspace = true }

# Import the Feels program types - temporarily disabled due to compilation issues
# feels = { path = "../../programs/feels", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.18.26"

[[example]]
name = "sdk_basic_usage"
path = "examples/sdk_basic_usage.rs"