[package]
name = "minimal-streaming-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
base58 = "0.2"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }