[package]
name = "streaming-adapter"
version = "0.1.0"
edition = "2021"

[workspace]
# Empty workspace to make this a standalone project

[build-dependencies]
tonic-build = "0.10"

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }


# gRPC server and protobuf
tonic = { version = "0.10", features = ["transport", "codegen", "prost"] }
prost = "0.12"
prost-types = "0.12"

# HTTP server with WebSocket support (for additional endpoints)
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana
solana-client = "2.2.1"
solana-sdk = "2.2.1"
solana-account-decoder = "2.2.1"
solana-transaction-status = "2.2.1"
base58 = "0.2"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

# For compatibility with Yellowstone types
bs58 = "0.5"