[package]
name = "solana-net-utils"
version = "2.2.1"
description = "Solana network utilities with const function fix"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solanalabs.com/"
documentation = "https://docs.rs/solana-net-utils"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
bytes = "1.10.1"
crossbeam-channel = "0.5.15"
itertools = "0.12.1"
libc = "0.2.177"
log = "0.4"
nix = { version = "0.29.0", features = ["socket"] }
rand = "0.8.5"
serde = "1.0"
socket2 = "0.6.1"
solana-logger = "2.2.1"
solana-metrics = "2.2.1"
solana-sdk = "2.2.1"
tokio = { version = "1.0", features = ["io-util", "net"] }
url = "2.0"

[[bin]]
name = "ip_address"
path = "src/bin/ip_address.rs"

[[bin]]
name = "ip_address_server"
path = "src/bin/ip_address_server.rs"