[package]
name = "feels"
version = "0.1.0"
edition = "2021"
description = "Concentrated liquidity AMM protocol for Solana"
license = "MIT"
repository = "https://github.com/timewave/feels-solana"
readme = "../README.md"
keywords = ["solana", "amm", "defi", "liquidity", "uniswap"]
categories = ["cryptography::cryptocurrencies", "finance"]

[lib]
crate-type = ["cdylib", "lib"]
name = "feels"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
spl-token-metadata-interface = { workspace = true }
spl-associated-token-account = { workspace = true }
# spl-math = { version = "0.3.0" } # Commented out due to global allocator conflict
ruint = { version = "1.12.0", default-features = false }
fixed = { version = "1.28", default-features = false, features = ["serde"] }

# Phase 2: Valence integration for atomic backrunning
# Note: Commented out until Valence is properly published
# valence-kernel = { git = "https://github.com/timewave-computer/valence-solana", branch = "main", features = ["no-entrypoint"] }
# valence-sdk = { git = "https://github.com/timewave-computer/valence-solana", branch = "main" }

[dev-dependencies]
getrandom = { version = "0.2.16", features = ["custom"] }
# Integration test dependencies disabled due to yanked solana_rbpf
# solana-program-test = { workspace = true }
# solana-sdk = { workspace = true }
# tokio = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)', 'cfg(target_os, values("solana"))'] }