[package]
name = "feels"
version = "0.1.0"
edition = "2021"
description = "Concentrated liquidity AMM protocol for Solana"
license = "MIT"
repository = "https://github.com/timewave/feels-solana"
readme = "../README.md"
keywords = ["solana", "amm", "defi", "liquidity", "uniswap"]
categories = ["cryptography::cryptocurrencies", "finance"]

[lib]
crate-type = ["cdylib", "lib"]
name = "feels"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []
test-utils = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
spl-token-metadata-interface = { workspace = true }
spl-associated-token-account = { workspace = true }
mpl-token-metadata = { version = "5.1.1", default-features = false }
ethnum = { version = "1.5.0", default-features = false }
# spl-math = { version = "0.3.0" } # Commented out due to global allocator conflict
# ruint = { version = "1.10.1", default-features = false }
fixed = { version = "1.28", default-features = false, features = ["serde", "num-traits"] }
num-traits = { version = "0.2", default-features = false }
micromath = { version = "2.1", default-features = false }
integer-sqrt = { workspace = true }

# Phase 2: Valence integration for atomic backrunning
# Note: Commented out until Valence is properly published
# valence-kernel = { git = "https://github.com/timewave-computer/valence-solana", branch = "main", features = ["no-entrypoint"] }
# valence-sdk = { git = "https://github.com/timewave-computer/valence-solana", branch = "main" }

# Orca Whirlpools core for battle-tested tick math
orca_whirlpools_core = { version = "2.0.0", default-features = false }

[dev-dependencies]
getrandom = { version = "0.2.16", features = ["custom"] }
# Integration test dependencies
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
proptest = "1.0"
static_assertions = "1.1"
anyhow = { workspace = true }
feels-sdk = { path = "../../sdk" }
async-trait = "0.1"
solana-client = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)', 'cfg(target_os, values("solana"))', 'cfg(feature, values("telemetry", "size-checks"))'] }