[package]
name        = "feels-protocol"
description = "Core state of feels protocol"
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name       = "feels_protocol"

[features]
default        = []
cpi            = ["no-entrypoint"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
idl-build      = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true }

[dev-dependencies]
feels-test-utils = { workspace = true }
tokio            = { workspace = true }
