[package]
name        = "feels-protocol"
description = "Core state of feels protocol"
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name       = "feels_protocol"

[features]
default        = []
cpi            = ["no-entrypoint"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
idl-build      = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang         = { workspace = true }
anchor-spl          = { workspace = true }
feels-token-factory = { path = "../token_factory", features = ["cpi"] }
feelssol-controller = { path = "../feelssol_controller", features = ["cpi"] }

[dev-dependencies]
feels-test-utils    = { workspace = true }
solana-sdk          = { workspace = true }
tokio               = { workspace = true }
anchor-client       = { workspace = true }
feels-token-factory = { path = "../token_factory" }
feelssol-controller = { path = "../feelssol_controller" }
spl-stake-pool      = { workspace = true }
borsh               = { workspace = true }
