[package]
name        = "feels-token-factory"
description = "Program for token creation"
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name       = "feels_token_factory"

[features]
default        = []
cpi            = ["no-entrypoint"]
no-entrypoint  = []
test-utils     = []
no-idl         = []
no-log-ix-name = []
idl-build      = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl  = { workspace = true }

[dev-dependencies]
feels-test-utils = { workspace = true }
solana-sdk       = { workspace = true }
tokio            = { workspace = true }
feels-protocol   = { path = "../protocol", features = ["no-entrypoint"] }
