[package]
name        = "feels-token-wrapper"
description = "Wrapper of FeelsSOL token"
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name       = "feels_token_wrapper"

[features]
default        = []
cpi            = ["no-entrypoint"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
idl-build      = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true }

[dev-dependencies]
feels-test-utils = { workspace = true }
solana-sdk       = { workspace = true }
tokio            = { workspace = true }
feels-protocol   = { path = "../protocol", features = ["no-entrypoint"] }
